# fortune

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine  README.md
.github/workflows/: fortune.yml
scripts/diesel/: diesel-fortune-model.sh  diesel-fortune-schema.sh  diesel-fortune.toml
scripts/shell/database/: backup-database-fortune.sh
src/: main-legacy.rs  main.rs
src/biz/: mod.rs
src/biz/bill/: bill_book_account_controller.rs  bill_book_controller.rs  bill_controller.rs  mod.rs
src/biz/contents/: contents_controller.rs  mod.rs
src/biz/permission/: mod.rs  permission_controller.rs
src/biz/role/: role_controller.rs
src/biz/template/: bill_book_template_controller.rs  mod.rs
src/biz/user/: bill_book_user_controller.rs  mod.rs  user_action_controller.rs
src/common/: health_controller.rs
src/model/: mod.rs
src/model/diesel/: mod.rs
src/model/diesel/fortune/: fortune_custom_models.rs  fortune_models.rs  fortune_schema.rs  mod.rs
src/model/request/: mod.rs
src/model/request/bill/: bill_add_request.rs  bill_book_archive_request.rs  bill_book_request.rs  bill_del_request.rs  bill_detail_request.rs  bill_edit_request.rs  bill_page_request.rs  (+2 more)
src/service/: mod.rs
src/service/bill/: bill_book_account_service.rs  bill_book_service.rs  bill_service.rs  mod.rs
src/service/contents/: contents_service.rs  mod.rs
src/service/role/: role_service.rs
src/service/template/: bill_book_template_service.rs  mod.rs
src/service/user/: mod.rs  user_action_service.rs
src/test/bill/: bill_book_account_test.rs  mod.rs
src/utils/: database.rs
(+29 files in other folders)
